// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QueryRenderer returns general error component for network failure 1`] = `
<GeneralError
  errorMessage={
    <Translation
      id="relay.query_renderer.no_connection"
    />
  }
/>
`;

exports[`QueryRenderer returns general error for other errors 1`] = `
<GeneralError
  errorMessage={
    <Translation
      passThrough="custom message"
    />
  }
/>
`;

exports[`QueryRenderer returns loader if no props and no errors 1`] = `<FullPageLoading />`;
